# Fauxcrophone

./: .gitignore  Cargo.toml  LoopbackBridge.h  LoopbackBridge.swift  README.md
AudioServerPlugIn/: DriverKitSetup.md  LoopbackDevice.swift  LoopbackRender.cpp
AudioServerPlugInTests/: LoopbackDriverTests.swift
SwiftUI/: DeviceView.swift  LoopbackViewModel.swift
napi-rs/: Cargo.toml  index.d.ts  index.js  index.ts  loopback.node  package-lock.json  package.json
napi-rs/examples/: node_feed.js
napi-rs/src/: lib.rs
scripts/: setup_driver.sh
src/: latency.rs  lib.rs  ring.rs
src/control/: api.rs  mod.rs  ui.rs
src/tests/: loopback_selftest.rs  mod.rs
tests/: latency_test.rs  loopback_bridge_test.rs
