[package]
name = "device_kit"
version = "0.1.0"
edition = "2024"

[dependencies]
dasp_frame = { version = "0.11", default-features = false, features = ["std"] }
dasp_signal = { version = "0.11", default-features = false, features = ["std"] }
memmap2 = "0.9"
thiserror = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
coreaudio-sys = "0.2"
crossbeam-channel = "0.5"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std"] }

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "loopbackctl"
path = "src/bin/loopbackctl.rs"
